# NetologyTasksSixModule

home_work_6.2.1/: df.sql
homework_6.4/homework_6.4.1/: public.sql
homework_6.4/homework_6.4.2/: public.sql
homework_6.4/homework_6.4.3/: public.sql
homework_6.5/1/: BDcontrol.cpp  BDcontrol.h  CMakeLists.txt  main.cpp
